added traefik setup
